--- a/templates/base.html
+++ b/templates/base.html
@@ -1,54 +1,54 @@
-{% load static %}
+<!-- HEAD HTML -->
+{% include "includes/head.html" %}
+<!-- END OF HEAD HTML -->
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% block meta %}
-    <!-- For support of older IE versions and eliminate validation errors" -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+  <body>
+    <!-- Header -->
+    <header class="container-fluid fixed-top">
+      <div class="row">
+        <div
+          class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+        >
+          <a href="(% url 'home' %)" class="nav-link main-logo-link">
+            <h2 class="logo-font text-black my-0">Tourbillon</h2>
+          </a>
+        </div>
+        <!-- Search form  -->
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <form action="" method="get">
+            <div class="input-group w-100">
+              <input
+                class="form-control border border-black rounded-0"
+                type="text"
+                name="q"
+                placeholder="Search..."
+              />
+              <div class="input-group-append">
+                <button
+                  type="submit"
+                  class="form-control btn btn-black border border-black rounded-0"
+                >
+                  <span class="icon"><i class="fas fa-search"></i></span>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
+      </div>
+    </header>
 
-    {% endblock %} {% block corecss %}
-    <!-- Bootstrap 5.3 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- Base CSS -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    {% endblock %} {% block extra_css %}{% endblock %}
+    {% if messages %}
+    <div class="message-container"></div>
+    {% endif %}
 
-    <!-- JavaScript -->
-    {% block corejs %}
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-      crossorigin="anonymous"
-    ></script>
-    {% endblock %}
+    <!-- Page Header -->
+    {% block page_header %} {% endblock %}
 
-    <title>Tourbillon</title>
-  </head>
-  <body></body>
+    <!-- Content -->
+    {% block content %} {% endblock %}
+
+    <!-- Postload JavaScript -->
+    {% block postloadjs %} {% endblock %}
+  </body>
 </html>
