--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -11,11 +11,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Explore and find that latest watch to add to your time piece collection. The watches are a statement piece.
+    Tourbillon offers a wide range of watches for every occasion and for everyone. Free delivery when you spend over €100."
+    />
+    <meta
+      name="keywords"
+      content="watches luxury brands, watch enthusiast, trending watch, tourbillon, luxury watches, statement piece, watch accessory, designer Watches,
+    luxury watch for unbeatable prices, wedding gift, supreme service, horology, Tourbillon luxury watch"
+    />
+    <meta name="google-site-verification" content="" />
     {% endblock %}
 
-    <!-- Core CSS -->
+    <!-- EXTRA META -->
+    {% block extra_meta %} {% endblock %}
+    <!-- END EXTRA META -->
 
+    <!-- CORE CSS -->
     {% block corecss %}
     <!-- Bootstrap 5.3 -->
     <link
@@ -25,20 +39,42 @@
       crossorigin="anonymous"
     />
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/static/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/static/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/static/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/static/favicon/site.webmanifest" />
+    {% endblock %}
+    <!-- END CORE CSS -->
+
+    <!-- EXTRA CSS -->
+    {% block extra_css %}
     <!-- Base CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
+    <!-- END EXTRA CSS -->
 
-    <!-- Extra CSS -->
-
-    {% block extra_css %}{% endblock %}
-
-    <!-- JavaScript -->
-    {% block corejs %}
+    <!-- EXTRA JAVASCRIPT -->
+    {% block extra_js %}
+    <!-- Fontawesome JS -->
+    <script
+      src="https://kit.fontawesome.com/0c0089ca10.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Bootstrap JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
@@ -55,6 +91,8 @@
       crossorigin="anonymous"
     ></script>
     {% endblock %}
+    <!-- END EXTRA JAVASCRIPT -->
+
     <title>Tourbillon {% block extra_title %}{% endblock %}</title>
   </head>
 </html>
