--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
           class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
         >
           <a href="(% url 'home' %)" class="nav-link main-logo-link">
-            <h2 class="logo-font text-black my-0">Tourbillon</h2>
+            <h2 class="my-0 logo">Tourbillon</h2>
           </a>
         </div>
         <!-- Search form  -->
@@ -49,11 +49,11 @@
                   {% if request.user.is_superuser %}
                   <a href="" aria-label="Go to the product management page" class="dropdown-item">Product Management</a>
                   {% endif %}
-                  <a href="{% url 'profile' %}" aria-label="Go to the profile page" class="dropdown-item">Profile</a>
-                  <a href="{% url 'account_logout' %}" aria-label="Go to the accout logout page" class="dropdown-item">Logout</a>
+                  <a href="" aria-label="Go to the profile page" class="dropdown-item">Profile</a>
+                  <a href="" aria-label="Go to the accout logout page" class="dropdown-item">Logout</a>
                   {% else %}
-                  <a href="{% url 'account_signup' %}" aria-label="Go to the signup page" class="dropdown-item">Register</a>
-                  <a href="{% url 'account_login' %}" aria-label="Go to the login page" class="dropdown-item">Login</a>
+                  <a href="" aria-label="Go to the signup page" class="dropdown-item">Register</a>
+                  <a href="" aria-label="Go to the login page" class="dropdown-item">Login</a>
                   {% endif %}
                </div>
             </li>
