--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,15 @@
 {% include "includes/head.html" %}
 <!-- END OF HEAD HTML -->
 
-  <body>
+  <body >
     <!-- Header -->
-    <header class="container-fluid fixed-top">
-      <div class="row">
+    <header class="container-fluid fixed-top p-0">
+      <div class="row pt-lg-2 d-none d-lg-flex">
         <div
           class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
         >
           <a href="(% url 'home' %)" class="nav-link main-logo-link">
-            <h2 class="my-0 logo">Tourbillon</h2>
+            <h2 class="my-0 logo-link uppercase">Tourbillon</h2>
           </a>
         </div>
         <!-- Search form  -->
