--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,17 @@
          </ul>
         </div>
       </div>
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light w-100">
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+              aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+           </button>
+           <!-- MAIN NAVBAR -->
+           {% include 'includes/main-navbar.html' %}
+           <!-- END OF MAIN NAVBAR -->
+        </nav>
+     </div>
     </header>
 
     {% if messages %}
