--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
           class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
         >
           <a href="(% url 'home' %)" class="nav-link main-logo-link">
-            <h2 class="my-0 logo-link uppercase">Tourbillon</h2>
+            <h2 class="my-0 logo uppercase">Tourbillon</h2>
           </a>
         </div>
         <!-- Search form  -->
@@ -81,7 +81,7 @@
            <span class="navbar-toggler-icon"></span>
            </button>
            <!-- MAIN NAVBAR -->
-           {% include 'includes/main-navbar.html' %}
+           {% include 'includes/main-nav.html' %}
            <!-- END OF MAIN NAVBAR -->
         </nav>
      </div>
