feat: Adds main-navbar for desktop.

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,13 +1,13 @@
 <!-- MAIN NAVBAR -->
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
+    <ul class="navbar-nav w-auto mb-2 mb-lg-0 mx-auto">
        <li class="nav-item">
-          <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}">
+          <a class="nav-link fw-bold mr-5" href="{% url 'home' %}">
           Home
           </a>
        </li>
        <li class="nav-item dropdown">
-          <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           All Products
           </a>
           <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -18,10 +18,10 @@
           </div>
        </li>
        <li class="nav-item dropdown">
-          <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Watches
           </a>
-          <div class="dropdown-menu border-0" aria-labelledby="watch-link">
+          <div class="dropdown-menu border-0" aria-labelledby="category-link">
              <a href="" class="dropdown-item">Automatic Watches</a>
              <a href="" class="dropdown-item">Classic Watches</a>
              <a href="" class="dropdown-item">Tourbillon Watches</a>
@@ -29,17 +29,17 @@
           </div>
        </li>
        <li class="nav-item dropdown">
-          <a class="font-weight-bold nav-link text-black mr-5" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Gender
           </a>
-          <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+          <div class="dropdown-menu border-0" aria-labelledby="gender-link">
              <a href="" class="dropdown-item">Ladies</a>
              <a href="" class="dropdown-item">Mens</a>
              <a href="" class="dropdown-item">All Watches</a>
           </div>
        </li>
        <li class="nav-item dropdown">
-          <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Special Offers
           </a>
           <div class="dropdown-menu border-0" aria-labelledby="specials-link">
@@ -50,10 +50,10 @@
           </div>
        </li>
        <li class="nav-item dropdown">
-          <a class="font-weight-bold nav-link text-black mr-5" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           More
           </a>
-          <div class="dropdown-menu border-0" aria-labelledby="specials-link">
+          <div class="dropdown-menu border-0" aria-labelledby="additional-link">
              <a href="" aria-label="Go to the reviews page" class="dropdown-item">Customer Reviews</a>
              {% if user.is_authenticated or user.is_superuser %}
              <a href="" aria-label="Go to the add review page" class="dropdown-item">Add Review</a>
