--- a/templates/base.html
+++ b/templates/base.html
@@ -75,14 +75,16 @@
         </div>
       </div>
       <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-light w-100">
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+        <nav class="navbar navbar-expand-lg w-100">
+          <div class="container-fluid">
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
               aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
            </button>
            <!-- MAIN NAVBAR -->
            {% include 'includes/main-nav.html' %}
            <!-- END OF MAIN NAVBAR -->
+          </div>
         </nav>
      </div>
     </header>
