--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,9 @@
               aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
            </button>
+           <!-- MOBILE NAVBAR -->
+           {% include 'includes/mobile-nav.html' %}
+           <!-- END OF MOBILE NAVBAR -->
            <!-- MAIN NAVBAR -->
            {% include 'includes/main-nav.html' %}
            <!-- END OF MAIN NAVBAR -->
