--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -50,6 +50,7 @@
   >
     <div class="text-center">
       <div><i class="fas fa-user fa-lg"></i></div>
+      <p class="my-0">Account</p>
     </div>
   </a>
   <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -57,10 +58,10 @@
     <a href="" class="dropdown-item">Admin</a>
     {% endif %}
     <a href="" class="dropdown-item">My Account</a>
-    <a href="" class="dropdown-item">Logout</a>
+    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
     {% else %}
-    <a href="" class="dropdown-item">Register</a>
-    <a href="" class="dropdown-item">Login</a>
+    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
     {% endif %}
   </div>
 </div>
