--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,21 +1,42 @@
 {% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Sign Up{% endblock %}
 
 {% load i18n %}
-
+<!-- prettier-ignore -->
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="col-lg-6">
+  <hr />
+  <h1>{% trans "Sign Up" %}</h1>
+  <hr />
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+  <p>
+    {% blocktrans %}Already have an account? Then please
+    <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+  </p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+  <form
+    class="signup"
+    id="signup_form"
+    method="post"
+    action="{% url 'account_signup' %}"
+  >
+    {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
+    <input
+      type="hidden"
+      name="{{ redirect_field_name }}"
+      value="{{ redirect_field_value }}"
+    />
+    {% endif %}
+    <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  </form>
+
+  <p class="mt-4 mb-5">
+    {% blocktrans %}Already have an account? Then please
+    <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+  </p>
+</div>
 
 {% endblock %}
