--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -44,9 +44,10 @@
     class="text-black nav-link d-block d-lg-none"
     href="#"
     id="user-options"
-    data-toggle="dropdown"
+    data-bs-toggle="dropdown"
     aria-haspopup="true"
     aria-expanded="false"
+    role="button"
   >
     <div class="text-center">
       <div><i class="fas fa-user fa-lg"></i></div>
