--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,37 +6,34 @@
 <!-- prettier-ignore -->
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<div class="col-lg-6">
+{% block inner_content %}
+<!-- SIGNUP SECTION -->
+<div>
   <hr />
-  <h1>{% trans "Sign Up" %}</h1>
+  <h2 class="mb-4">{% trans "Sign Up" %}</h2>
   <hr />
-
   <p>
     {% blocktrans %}Already have an account? Then please
     <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
   </p>
-
   <form
     class="signup"
     id="signup_form"
     method="post"
     action="{% url 'account_signup' %}"
   >
-    {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
+    {% csrf_token %} {{ form|crispy }} {% if redirect_field_value %}
     <input
       type="hidden"
       name="{{ redirect_field_name }}"
       value="{{ redirect_field_value }}"
     />
     {% endif %}
-    <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+    <a class="btn btn-secundary rounded-0" href="{% url 'account_login' %}"
+      >Back to Login</a
+    >
+    <button type="submit">{% trans "Sign Up" %}</button>
   </form>
-
-  <p class="mt-4 mb-5">
-    {% blocktrans %}Already have an account? Then please
-    <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-  </p>
 </div>
-
+<!-- END Of SIGNUP SECTION -->
 {% endblock %}
