--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -28,8 +28,9 @@
   {% else %} {% url 'account_email' as email_url %}
   <p>
     {% blocktrans %}This e-mail confirmation link expired or is invalid. Please
-    <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{%
-    endblocktrans %}
+    <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.
+    <!-- prettier-ignore -->
+    {% endblocktrans %}
   </p>
   {% endif %}
 </div>
