fix: style and structure for allauth templates in user accounts.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} {% load static %}
 
+<!-- HEAD HTML -->
+{% include "includes/head.html" %}
+<!-- END OF HEAD HTML -->
+
 <!-- Page Header -->
 {% block page_header %}
 <div class="container header-container">
