--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,16 +1,29 @@
 {% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Change Password{% endblock %}
 
 {% load i18n %}
-
+<!-- prettier-ignore -->
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+<div class="col-lg-6 mb-5">
+  <hr />
+  <h2 class="mt-5">{% trans "Change Password" %}</h2>
+  <hr />
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+  <form
+    method="POST"
+    action="{% url 'account_change_password' %}"
+    class="password_change"
+  >
+    {% csrf_token %} {{ form|crispy }}
+    <a href="{% url 'account_reset_password' %}" class="d-block mt-3"
+      >{% trans "Forgot Password?" %}</a
+    >
+    <button type="submit" name="action" class="btn btn-style px-5 py-1">
+      {% trans "Change Password" %}
+    </button>
+  </form>
+</div>
 {% endblock %}
