--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -9,33 +9,39 @@
 
 <!-- prettier-ignore -->
 {% block inner_content %}
-<hr />
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr />
+<div class="col-lg-6">
+  <hr />
+  <h2 class="mb-4">{% trans "Confirm E-mail Address" %}</h2>
+  <hr />
 
-{% if confirmation %}
+  {% if confirmation %}
 
-<!-- prettier-ignore -->
-{% user_display confirmation.email_address.user as user_display %}
-
-<p>
-  {% blocktrans with confirmation.email_address.email as email %}Please confirm
-  that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for
-  user {{ user_display }}.{% endblocktrans %}
-</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-  {% csrf_token %}
-  <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %} {% url 'account_email' as email_url %}
-
-<p>
-  {% blocktrans %}This e-mail confirmation link expired or is invalid. Please
-  <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.
   <!-- prettier-ignore -->
-  {% endblocktrans %}
-</p>
+  {% user_display confirmation.email_address.user as user_display %}
 
-{% endif %} {% endblock %}
+  <p>
+    {% blocktrans with confirmation.email_address.email as email %}Please
+    confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail
+    address for user {{ user_display }}.{% endblocktrans %}
+  </p>
+
+  <form
+    method="post"
+    action="{% url 'account_confirm_email' confirmation.key %}"
+  >
+    {% csrf_token %}
+    <button type="submit">{% trans 'Confirm' %}</button>
+  </form>
+
+  {% else %} {% url 'account_email' as email_url %}
+
+  <p>
+    {% blocktrans %}This e-mail confirmation link expired or is invalid. Please
+    <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.
+    <!-- prettier-ignore -->
+    {% endblocktrans %}
+  </p>
+
+  {% endif %}
+</div>
+{% endblock %}
