--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans
 "Sign Out" %}{% endblock %} {% block inner_content %}
 <!-- LOGOUT SECTION -->
-<div>
+<div class="col-lg-6">
   <hr />
   <h2 class="mb-4">{% trans "Sign Out" %}</h2>
   <hr />
@@ -15,8 +15,14 @@
       value="{{ redirect_field_value }}"
     />
     {% endif %}
-    <a class="btn rounded-0" href="{% url 'home' %}">Cancel</a>
-    <button type="submit">{% trans 'Sign Out' %}</button>
+    <a
+      type="button"
+      class="btn btn-outline-secondary rounded-1"
+      href="{% url 'home' %}"
+    >
+      Cancel
+    </a>
+    <button class="btn rounded-1" type="submit">{% trans 'Sign Out' %}</button>
   </form>
 </div>
 <!-- END OF LOGOUT SECTION -->
