--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,18 +1,42 @@
-{% extends "account/base.html" %} {% load i18n %} {% load account %}
+{% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Password Reset{% endblock %}
+
+{% load i18n %}
+{% load account %}
 <!-- prettier-ignore -->
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-<hr />
-<h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-<hr />
-<!-- prettier-ignore -->
-{% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+<div class="col-lg-6">
+  <hr />
+  <h2 class="mt-5">{% trans "Password Reset" %}</h2>
+  <hr />
+  {% if user.is_authenticated %} {% include
+  "account/snippets/already_logged_in.html" %} {% endif %}
 
-<p>
-  {% blocktrans %}We have sent you an e-mail. Please contact us if you do not
-  receive it within a few minutes.{% endblocktrans %}
-</p>
+  <p>
+    {% trans "Forgotten your password? <br />
+    Enter your e-mail address below, and we'll send you an e-mail allowing you
+    to reset it." %}
+  </p>
+
+  <form
+    method="POST"
+    action="{% url 'account_reset_password' %}"
+    class="password_reset"
+  >
+    {% csrf_token %} {{ form|crispy }}
+    <input
+      type="submit"
+      class="btn btn-style px-5 py-1"
+      value="{% trans 'Reset My Password' %}"
+    />
+  </form>
+
+  <p>
+    {% blocktrans %}Please contact us if you have any trouble resetting your
+    password.{% endblocktrans %}
+  </p>
+</div>
 {% endblock %}
