--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,19 +1,33 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
+{% extends "account/base.html" %} {% block extra_title %} | Change Password{%
+endblock %} {% load i18n %}
+<!-- prettier-ignore -->
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block inner_content %}
+<div class="col-lg-6">
+  <hr />
+  <h2 class="logo-font">
+    {% if token_fail %}{% trans "Bad Token" %}{% else %}
+    <!-- prettier-ignore -->
+    {% trans "Change Password" %}{% endif %}
+  </h2>
+  <hr />
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
-{% endblock %}
+  {% if token_fail %} {% url 'account_reset_password' as passwd_reset_url %}
+  <p>
+    {% blocktrans %}The password reset link was invalid, possibly because it has
+    already been used. Please request a
+    <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
+  </p>
+  {% else %}
+  <form method="POST" action="{{ action_url }}">
+    {% csrf_token %} {{ form|crispy }}
+    <input
+      type="submit"
+      name="action"
+      class="btn-style logo-font btn px-5 py-1"
+      value="{% trans 'Change password' %}"
+    />
+  </form>
+  {% endif %}
+</div>
