--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,16 @@
 {% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Change Password{% endblock %}
 
 {% load i18n %}
+<!-- prettier-ignore -->
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block inner_content %}
+<div class="col-lg-6">
+  <hr />
+  <h2 class="logo-font">{% trans "Change Password" %}</h2>
+  <hr />
+  <p>{% trans 'Your password is now changed.' %}</p>
+</div>
 {% endblock %}
