--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,24 @@
 {% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Set Password{% endblock %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block inner_content %}
+<!-- PASSWORD SET SECTION -->
+<div class="col-lg-6">
+  <h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+  <form
+    method="POST"
+    action="{% url 'account_set_password' %}"
+    class="password_set"
+  >
+    {% csrf_token %} {{ form|crispy }}
+    <input type="submit" name="action" value="{% trans 'Set Password' %}" />
+  </form>
+</div>
+<!-- END PASSWORD SET SECTION -->
 {% endblock %}
