--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -1,11 +1,19 @@
 {% extends "account/base.html" %}
+<!-- prettier-ignore -->
+{% block extra_title %} | Sign Up Closed{% endblock %}
 
 {% load i18n %}
-
+<!-- prettier-ignore -->
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+{% block inner_content %}
+<!-- SIGNUP CLOSED SECTION -->
+<div class="col-lg-6">
+  <hr />
+  <h2 class="mb-4">{% trans "Sign Up Closed" %}</h2>
+  <hr />
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+  <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+</div>
+<!-- END SIGNUP CLOSED SECTION -->
 {% endblock %}
