--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -1,5 +1,6 @@
 {% extends "account/base.html" %} {% load i18n %}
 <!-- prettier-ignore -->
+{% block extra_title %} | Verify Your E-mail Address{% endblock %}
 <!-- PAGE HEADER -->
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 <!-- END PAGE HEADER -->
@@ -12,14 +13,19 @@
   </div>
 </div>
 <!-- END OF BLOCK PAGE HEADER -->
-{% endblock %} {% block content %}
+{% endblock %} {% block inner_content %}
 <!-- VERIFICATION EMAIL SECTION -->
-<div class="container mt-5">
+<div class="container mt-5 col-lg-6">
   <div class="row">
     <div class="col-md-6">
-      <h3 class="mb-4">{% trans "Verify Your E-mail Box" %}</h3>
-      <!-- prettier-ignore -->
-      <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+      <hr />
+      <h2 class="mb-4">{% trans "Verify Your E-mail Box" %}</h2>
+      <hr />
+      <p>
+        {% blocktrans %}We have sent an e-mail to you for verification. Follow
+        the link provided to finalize the signup process. Please contact us if
+        you do not receive it within a few minutes.{% endblocktrans %}
+      </p>
     </div>
   </div>
 </div>
