--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <div
           class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
         >
-          <a href="(% url 'home' %)" class="nav-link main-logo-link">
+          <a href="{% url 'home' %}" class="nav-link main-logo-link">
             <h2 class="my-0 logo">Tourbillon</h2>
           </a>
         </div>
