--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -15,18 +15,16 @@
 <!-- END OF BLOCK PAGE HEADER -->
 {% endblock %} {% block inner_content %}
 <!-- VERIFICATION EMAIL SECTION -->
-<div class="container mt-5 col-lg-6">
+<div class="container mt-5">
   <div class="row">
-    <div class="col-md-6">
-      <hr />
-      <h2 class="mb-4">{% trans "Verify Your E-mail Box" %}</h2>
-      <hr />
-      <p>
-        {% blocktrans %}We have sent an e-mail to you for verification. Follow
-        the link provided to finalize the signup process. Please contact us if
-        you do not receive it within a few minutes.{% endblocktrans %}
-      </p>
-    </div>
+    <hr />
+    <h2 class="mb-4">{% trans "Verify Your E-mail Box" %}</h2>
+    <hr />
+    <p>
+      {% blocktrans %}We have sent an e-mail to you for verification. Follow the
+      link provided to finalize the signup process. Please contact us if you do
+      not receive it within a few minutes.{% endblocktrans %}
+    </p>
   </div>
 </div>
 <!-- END VERIFICATION EMAIL SECTION -->
