--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,15 +1,215 @@
 {% extends "base.html" %} {% load static %}
-
 <!-- prettier-ignore -->
+{% block extra_title %} | Watches{% endblock %}
+
 {% block page_header %}
+<!-- BLOCK PAGE HEADER -->
 <div class="container header-container">
   <div class="row"><div class="col"></div></div>
 </div>
+<!-- END BLOCK PAGE HEADER -->
 {% endblock %}
 
 <!-- prettier-ignore -->
 {% block content %}
-<div class="container header-container">
-  <div class="row"><div class="col">{{ products }}</div></div>
+<!-- PRODUCT SECTION -->
+<div class="container-fluid header-container">
+  <div class="row">
+    <div class="product-container col-10 offset-1">
+      <div class="row mt-1 mb-2">
+        <!-- Sorting selection wrapper -->
+        <div
+          class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end"
+        >
+          <div class="sort-select-wrapper w-50">
+            <select id="sort-selector" class="custom-select custom-select-sm rounded-1 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
+                    <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                    </select>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 order-md-first">
+          <p class="text-muted mt-3 text-center text-md-left">
+            <!-- prettier-ignore -->
+            {% if search_term or current_categories or current_sorting != 'None_None' %}
+            <span class="small"
+              ><a
+                href="{% url 'products' %}"
+                aria-label="Go to the products page"
+                >Products Home</a
+              >
+              |
+            </span>
+            {% endif %} {{ products|length }} Products{% if search_term %} found
+            for <strong>"{{ search_term }}"</strong>{% endif %}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        {% for product in products %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="card h-100 border-0">
+            {% if product.image %}
+            <!-- Product image -->
+            <a
+              href=""
+              aria-label="Go to the products details page {{ product.name }}"
+              class="text-center"
+            >
+              <img
+                class="card-img-top img-fluid product-img mt-3"
+                src="{{ product.image.url }}"
+                alt="{{ product.name }} image"
+              />
+            </a>
+            {% else %}
+            <a href="" aria-label="Go to the {{ product.name }} details page">
+              <img
+                class="card-img-top img-fluid"
+                src="{{ MEDIA_URL }}noimage.png"
+                alt="{{ product.name }} image"
+              />
+            </a>
+            {% endif %}
+            <div class="card-body pb-0">
+              <p class="mb-0">{{ product.name }}</p>
+            </div>
+            <div class="card-footer bg-white pt-0 border-0 text-left">
+              <div class="row">
+                <div class="col">
+                  <p class="mb-0 text-left font-weight-bold">
+                    €{{ product.price }}
+                  </p>
+                  {% if product.category %}
+                  <p class="small mt-1 mb-0">
+                    <a
+                      href="{% url 'products' %}?category={{ product.category.name | urlencode }}"
+                      aria-label="Go to the products category page"
+                      class="text-muted"
+                    >
+                      <i class="fa regular fa-clock prussian-blue"></i>
+                      {{ product.category.friendly_name }}
+                    </a>
+                  </p>
+                  {% endif %} {% if product.gender_category %}
+                  <p class="small mt-1 mb-0">
+                    <a
+                      href="{% url 'products' %}?gender_category={{ product.gender_category | urlencode }}"
+                      aria-label="Go to the gender category page"
+                      class="text-muted"
+                    >
+                      <i class="fas fa-tag mr-1 prussian-blue"></i>
+                      <!-- prettier-ignore -->
+                      {{ product.gender_category }}
+                    </a>
+                  </p>
+                  {% endif %}
+                  <!-- Rating -->
+                  <div class="d-inline">
+                    {% include 'products/includes/product_rating.html' %}
+                  </div>
+
+                  {% if product.review_count > 0 %}
+                  <p class="ms-3 small d-inline">({{ product.review_count}})</p>
+                  {% endif %}
+                  <div>
+                    <a
+                      href=""
+                      aria-label="Go to the  {{ product.name }} details page"
+                      class="btn btn-secundary rounded-1 mt-2"
+                      >Add to bag</a
+                    >
+                  </div>
+                  {% if request.user.is_superuser %}
+                  <hr />
+                  <div class="text-center mt-3">
+                    <a
+                      href=""
+                      aria-label="Go to the {{ product.name }} edit page"
+                      class="btn btn-edit btn-sm btn-secondary mb-3 rounded-1"
+                      >Edit</a
+                    >
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-danger mb-3 rounded-1"
+                      data-bs-toggle="modal"
+                      data-bs-target="#delete-product{{ product.id }}"
+                      aria-label="Delete"
+                    >
+                      Delete
+                    </button>
+                  </div>
+                  <!-- Delete product bootstrap modal-->
+                  <div
+                    class="modal fade"
+                    id="delete-product{{ product.id }}"
+                    tabindex="-1"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title">Delete Product</h5>
+                        </div>
+                        <div class="modal-body">
+                          Are you sure you want to delete this product?
+                        </div>
+                        <div class="modal-footer">
+                          <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                            aria-label="Close Modal"
+                          >
+                            Close
+                          </button>
+                          <a
+                            href=""
+                            aria-label="Delete {{ product.name }}"
+                            class="btn btn-danger"
+                            >Delete</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% if forloop.counter|divisibleby:1 %}
+        <div class="col-12 d-sm-none mb-5">
+          <hr />
+        </div>
+        {% endif %} {% if forloop.counter|divisibleby:2 %}
+        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+          <hr />
+        </div>
+        {% endif %} {% if forloop.counter|divisibleby:3 %}
+        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+          <hr />
+        </div>
+        {% endif %} {% if forloop.counter|divisibleby:4 %}
+        <div class="col-12 d-none d-xl-block mb-5">
+          <hr />
+        </div>
+        {% endif %} {% empty %}
+        <div class="col mt-5">
+          <p class="text-center">Sorry, no watch match that search.</p>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 </div>
+<!-- END PRODUCT SECTION -->
 {% endblock %}
